# Copyright (C) 1999-2000 Open Source Telecom Corporation.
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AC_INIT(reconfig)
VERSION="2.0.2"
REQUIRES="0.99.0"
LT_RELEASE="0.0"
LT_VERSION="0:2"
AC_CONFIG_AUX_DIR(config)
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL
AM_INIT_AUTOMAKE(ccscript,[$VERSION])
#AM_CONFIG_HEADER(src/config.h)
OST_PROG_COMMON
OST_PROG_LIBVER
OST_PROG_LIBRARY(CCXX,[$LT_VERSION])
OST_AUTOMAKE_MODE
OST_MAINTAINER_MODE
OST_CCXX2_VERSION([$REQUIRES],)
OST_CCXX2_DYNLOADER
AM_CONDITIONAL(MODULES, test $ost_cv_dynloader = yes)
KDOC_DIR="\$(top_srcdir)/doc"
AC_SUBST(LT_RELEASE)
AC_SUBST(KDOC_DIR)
AC_OUTPUT(src/Makefile config/Makefile m4/Makefile doc/Makefile
Makefile pkginfo ccscript.spec freebsd/Makefile freebsd/pkg-plist)

if test ! -f doc/html/index.html ; then exit 0 ; fi
ls doc/man3/*.3cc | sed -e 's:^doc/man3/:man/man3/:' >>freebsd/pkg-plist
ls doc/html | sed -e 's:^:share/doc/ccscript/:' >>freebsd/pkg-plist
