## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

CFLAGS =\
	 -Wall -Wimplicit -Wreturn-type -Wunused -Wswitch -Wcomment -Wuninitialized -Wparentheses -Wtraditional -Wpointer-arith -Wmissing-prototypes\
	 -O1\
	 -g

CXXFLAGS =\
	 -Wall -Wimplicit -Wreturn-type -Wunused -Wswitch -Wcomment -Wuninitialized -Wparentheses -Wtraditional -Wpointer-arith -Wmissing-prototypes\
	 -O1\
	 -g

bin_PROGRAMS = c3ds

c3ds_SOURCES = \
	main.cc\
	3DCamera.cc\
	3DCamera.h\
	3DFace.cc\
	3DFace.h\
	3DModel.cc\
	3DModel.h\
	3DObject.cc\
	3DObject.h\
	3dsFileFormat.cc\
	3dsFileFormat.h\
	3dsFileLoader.cc\
	3dsFileLoader.h\
	VECTOR.cc\
	VECTOR.h\
	MATRIX.cc\
	MATRIX.h\
	ViewControl.cc\
	ViewControl.h\
	Window.cc\
	Window.h\
	AppFrame.cc\
	AppFrame.h\
	tpot.3ds

c3ds_LDFLAGS = 

c3ds_LDADD = \
	-lGL -lGLU -lglut

